--- a/Application/Home/View/AllInOne/allmodules.html
+++ b/Application/Home/View/AllInOne/allmodules.html
@@ -17,7 +17,7 @@
 <div id="AllInOneMain">
     <INPUT type="text" id="user_id" name="user_id" value="{$user_id}" >
     <br/>
-    <INPUT type="text" id="department" name="department" value="{$department}" >
+    <INPUT type="text" id="user_department" name="user_department" value="{$user_department}" >
     <br/>
     <INPUT type="text" id="dep_module" name="dep_module" value='{$dep_module}' >
     <br/>
@@ -40,7 +40,7 @@
 <span id="lock">锁定</span><span id="unlock">解锁</span>
 <br>
 <div id="AllInOneDetail">
-    <include file="AllInOne/module_gczcgl" />
+    <include file="AllInOne/module_gysgl" />
 </div>
 
 
