--- a/Application/Home/View/AllInOne/allmodules.html
+++ b/Application/Home/View/AllInOne/allmodules.html
@@ -40,7 +40,7 @@
 <span id="lock">锁定</span><span id="unlock">解锁</span>
 <br>
 <div id="AllInOneDetail">
-    <include file="AllInOne/module_gysgl" />
+    <include file="AllInOne/module_xmzjlgl" />
 </div>
 
 
