--- a/Application/Home/View/AllInOne/allmodules.html
+++ b/Application/Home/View/AllInOne/allmodules.html
@@ -37,7 +37,7 @@
 <span id="lock">锁定</span><span id="unlock">解锁</span>
 <br>
 <div id="AllInOneDetail">
-    <include file="AllInOne/module_xmcbgl" />
+    <include file="AllInOne/module_xmrlzygl" />
 </div>
 
 
