sc_zb_flag xmrlzygl

--- a/Application/Home/View/AllInOne/module_xmjbxx.html
+++ b/Application/Home/View/AllInOne/module_xmjbxx.html
@@ -62,7 +62,7 @@
                     <a id="sc_mag_company" jb_field="jb_select_save" >...</a>
                 </td>
                 <td>中标状态:
-                    <select id="sc_zb_flag" name="sc_zb_flag"  jb_field="jb_select_save" >
+                    <select id="sc_zb_flag" name="sc_zb_flag"  jb_field="jb_single_save" >
                         <option value="0" selected="selected">请选择</option>
                         <option value="A">落标</option>
                         <option value="B">中标</option>
