--- a/Application/Home/View/AllInOne/allmodules.html
+++ b/Application/Home/View/AllInOne/allmodules.html
@@ -29,6 +29,8 @@
     <br/>
     <textarea rows="10" cols="200" id="all_dep_username" name="all_dep_username" >{$all_dep_username}</textarea>
     <br/>
+    <INPUT type="text" id="cur_project_sc_zb_flag" name="cur_project_sc_zb_flag" value="{$cur_project_sc_zb_flag}" >
+    <br/>
 </div>
 
 
@@ -37,7 +39,17 @@
 <span id="lock">锁定</span><span id="unlock">解锁</span>
 <br>
 <div id="AllInOneDetail">
+    <include file="AllInOne/module_xmjbxx" />
+    <include file="AllInOne/module_xmscfx" />
+    <include file="AllInOne/module_khbyd" />
     <include file="AllInOne/module_xmrlzygl" />
+    <include file="AllInOne/module_xmsjgl" />
+    <include file="AllInOne/module_xmcbgl" />
+    <include file="AllInOne/module_xmzjlgl" />
+    <include file="AllInOne/module_gysgl" />
+    <include file="AllInOne/module_ygjxgl" />
+    <include file="AllInOne/module_gczcgl" />
+    <include file="AllInOne/module_dxmgl" />
 </div>
 
 
