--- a/Application/Home/View/AllInOne/allmodules.html
+++ b/Application/Home/View/AllInOne/allmodules.html
@@ -39,7 +39,7 @@
 <span id="lock">锁定</span><span id="unlock">解锁</span>
 <br>
 <div id="AllInOneDetail">
-    <include file="AllInOne/module_xmsjgl" />
+    <include file="AllInOne/module_xmzjlgl" />
 </div>
 
 
